--- a/css/general.css
+++ b/css/general.css
@@ -3,7 +3,7 @@ html {
 }
 body {
   font-family: sans-serif;
-  background-color: #F0F0F0;
+  background-color: #fafafa;
 }
 .container {
   width: 80%;
