--- a/css/style.css
+++ b/css/style.css
@@ -331,7 +331,7 @@ del {
   color: white;
   font-size: 3.2rem;
 }
-.container img {
+.container-img {
   width: 100%;
   /* yangi section */
   /* * {
