--- a/css/queries.css
+++ b/css/queries.css
@@ -155,11 +155,15 @@
   .Hero_img img {
     width: 88%;
   }
+  .course-big {
+    font-size: 5rem;
+  }
 }
 @media (max-width: 805px) {
   html {
     font-size: 50%;
   }
+
   .Hero_slider {
     flex-direction: column;
     row-gap: 2rem;
@@ -221,6 +225,41 @@
   }
   .container1 {
     padding: 5rem 10%;
+  }
+
+  .menuBtn {
+    display: block;
+  }
+  .main-nav {
+    opacity: 0;
+    background-color: rgba(255, 255, 255, 0.972);
+    width: 100%;
+    height: 100vh;
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 2rem;
+    pointer-events: auto;
+    visibility: visible;
+    transform: translate(100%, -100%);
+    transition: all 1s ease-in-out;
+  }
+  .openMenu .main-nav {
+    opacity: 1;
+    transform: translate(0);
+  }
+  .main-nav-list {
+    flex-direction: column;
+  }
+  .openMenu .menuBtn {
+    display: none;
+  }
+  .openMenu .closeBtn {
+    display: block;
+    z-index: 1;
   }
 }
 
